--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
 </head>
 
 <body class="writer">
+
+    <div id = "side-menu" class="side-nav">
+        <a href="#">Hellurei</a>
+        <a href="#">Onni</a>
+        <a href="#">Gideon</a>
+
+    </div>
+    <nav class="navbar">
+        <ul class = "navbar-nav">
+            <a href = "#" class = "nav-link">
+                <svg>
+                    
+                </svg>
+            </a>
+            
+        </ul>
+    </nav>
     <div class="overlay">
         <div class="wordcount modal">
             <h1>Target Word Count</h1>
@@ -63,7 +80,7 @@
     <div class="ui">
         <div class="wrapper">
             <div class="top editing">
-                <button class="menu" title="Options">
+                <button class="menu" title="Options" onclick="SlideMenu()">
                     <svg class="option_bar_settings"></svg>
                 </button>
                <button class="fullscreen" title="Fullscreen Toggle">
