Minimal release version

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <input type="number" name="quantity" value="0" min="0" />
             </div>
         </div>
-
+    <!-- TODO: Save formats -->
+    <!--
         <div class="saveoverlay modal">
             <h1>Select save format</h1>
             <p class="saveselection">
@@ -55,10 +56,11 @@
                 <svg class="arrow_in_down"></svg>
             </button>
             <div>
-                Or select format and press ctrl+c (cmd+c on mac) to copy the text.
+                Or select format and press ctrl+c to copy the text.
             </div>
             <textarea class="hiddentextbox"></textarea>
         </div>
+    -->
     </div>
 
     <div class="text-options">
@@ -87,22 +89,27 @@
 
     <div class="ui">
         <div class="wrapper">
+            
             <div class="top editing">
+                <!-- TODO: Options -->
+                <!--
                 <button class="menu" title="Options" onclick="SlideMenu()">
                     <svg class="option_bar_settings"></svg>
                 </button>
+                -->
                 <button class="fullscreen" title="Fullscreen Toggle">
                     <svg class="full_screen"></svg>
                 </button>
                 <button class="color-flip" title="Invert colors">
                     <svg class="contrast"></svg>
                 </button>
-
+            <!-- TODO: Target word count -->
+            <!--
                 <button class="target useicons" title="Set target word count">
                     <svg class="focus_center_round"></svg>
                 </button>
-                <button class="save" title="Save Text">
-
+            -->
+                <button class="savebutton" title="Save Text">
                     <svg class="arrow_in_down"></svg>
                 </button>
 
